--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,8 @@ body {
 	display: inline-block;
 }
 
+/*  decided not to implement the toggle switch */
+/* --------- below this line not used ------------- */
 #but-box {
 	position: absolute;
 	left: 5%;
@@ -75,7 +77,7 @@ input:checked + .slider:before {
 	-ms-transform: translateX(26px);
 	transform: translateX(26px);
 }
-
+/* ----------- above this line not used ------------------- */
 
 
 
